se empieza para agregar-editar ligas, tambien se empieza con la correcta funcion de la navegacion de los intents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,30 +16,43 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".moduloAdminJugadores.agregarEditar.view.AgregarEditarJugadorFragment"></activity>
-        <activity android:name=".moduloAdminJugadores.view.AdministrarJugadoresActivity" />
-        <activity android:name=".moduloDelegado.jugadoresDel.view.JugadoresDelActivity" />
-        <activity android:name=".moduloAdm.editarJugador.EditarJugadorAdm" />
-        <activity android:name=".moduloAdm.nuevoJugador.view.NuevoJugadorAdmFragment" />
-        <activity android:name=".moduloAdm.jugadoresAdm.view.JugadoresAdmActivity" />
-        <activity android:name=".moduloDelegado.editarEquipoDel.view.EditarEquipoDelActivity" />
-        <activity android:name=".moduloDelegado.menuDelegado.MenuDelegadoActivity" />
-        <activity android:name=".moduloAdm.editarEquipo.view.EditarEquipoAdm" />
-        <activity android:name=".moduloAdm.nuevoEquipo.view.NuevoEquipoActivity" />
-        <activity android:name=".moduloAdm.equiposAdm.view.EquiposAdm" />
-        <activity android:name=".moduloAdm.listadoCanchas.view.ListadoCanchasActivity" />
-        <activity android:name=".moduloAdm.listadoLigas.ListadoLigasActivity" />
+        <activity android:name=".moduloAdm.AgregaEditaLigas"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdminJugadores.agregarEditar.view.AgregarEditarJugadorFragment" />
+        <activity android:name=".moduloAdminJugadores.view.AdministrarJugadoresActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloDelegado.editarEquipoDel.view.EditarEquipoDelActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloDelegado.menuDelegado.MenuDelegadoActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.editarEquipo.view.EditarEquipoAdm"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.nuevoEquipo.view.NuevoEquipoActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.equiposAdm.view.EquiposAdm"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.listadoCanchas.view.ListadoCanchasActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.listadoLigas.ListadoLigasActivity"
+            android:launchMode="singleInstance"/>
         <activity
             android:name=".common.animaciones.cargando.CargandoDialog"
             tools:ignore="Instantiatable" />
-        <activity android:name=".moduloAdm.primerIngreso.altaCancha.ubicacion.UbicacionCanchaActivity" />
-        <activity android:name=".moduloAdm.primerIngreso.altaLiga.AltaLigaActivity" />
-        <activity android:name=".moduloAdm.primerIngreso.altaCancha.AltaCanchaActivity" />
-        <activity android:name=".moduloAdm.primerIngreso.altaAdmin.AltaAdminActivity" />
+        <activity android:name=".moduloAdm.primerIngreso.altaCancha.ubicacion.UbicacionCanchaActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.primerIngreso.altaLiga.AltaLigaActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.primerIngreso.altaCancha.AltaCanchaActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloAdm.primerIngreso.altaAdmin.AltaAdminActivity"
+            android:launchMode="singleInstance"/>
         <activity android:name=".moduloLogin.view.LoginActivity" />
-        <activity android:name=".moduloAdm.mainAdm.AdminActivity" />
-        <activity android:name=".moduloDelegado.mainDelegado.view.MainDelegadoActivity" />
-        <activity android:name=".moduloJugador.JugadorActivity" />
+        <activity android:name=".moduloAdm.mainAdm.AdminActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloDelegado.mainDelegado.view.MainDelegadoActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".moduloJugador.JugadorActivity"
+            android:launchMode="singleInstance"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
