se continua con agregar-editar ligas aun todavia le falta a la clase principal para que funcione

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".moduloAdm.AgregaEditaLigas"
+        <activity android:name=".moduloAdm.agregaEditaLigas.view.AgregaEditaLigas"
             android:launchMode="singleInstance"/>
         <activity android:name=".moduloAdminJugadores.agregarEditar.view.AgregarEditarJugadorFragment" />
         <activity android:name=".moduloAdminJugadores.view.AdministrarJugadoresActivity"
